--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 35
-    buildToolsVersion '35.0.3'
+    buildToolsVersion '35.0.1'
 
     defaultConfig {
         minSdkVersion 24
@@ -24,6 +24,10 @@ android {
         main {
             jniLibs.srcDirs = ['libs']
         }
+    }
+
+    lintOptions {
+        abortOnError false
     }
 }
 
