--- a/example/package.json
+++ b/example/package.json
@@ -18,6 +18,8 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "ast-types": "^0.16.1",
     "expo": "^52.0.44",
+    "expo-asset": "^12.0.9",
+    "expo-font": "^14.0.9",
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -49,5 +51,4 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   }
-
 }
